test/testdata/variables/self_referential_definition_error_global.lox
// error: a has been used before its declaration
// lint error: a has been used before its declaration
var a = a;
print a;
